src/app/resources/css/mpese.css
/* ... */
.navbar-inverse > .container {
  align-items: center;
  display: flex;
  justify-content: space-between;
  width: 95%;
}

@media (min-width: 768px) {
  .navbar-inverse > .container {
    display: flex;
  }
}

.container > .navbar-header {
  flex: 1;
  padding: 10px 0;
}

.navbar-inverse .navbar-brand,
.navbar-inverse .navbar-nav > li > a {
  color: white;
  font-family: 'now';
  font-size: 0.85em;
  font-weight: 400;
}

.navbar>.container .navbar-brand {
  background: url('../img/logo.svg');
  background-size: cover;
  height: 70px;
  text-indent: -9999em;
  width: 260px;
}

.navbar-fixed-top {
  position: relative;
}


.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
  background-color: #ffffff;
  color: #000;
}

.dropdown-menu {
  border: 1px solid #089fbd;
  border-top: 0;
  -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0);
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0);
  margin-left: -1px;
}

.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
  border-color:white;
}


@media (min-width: 768px) {
  .navbar-nav {
    float: none;
  }

  .container > .navbar-header {
    padding: 0;
  }
  .navbar>.container .navbar-brand {
    height: 85px;
    width: 320px;
  }
  .navbar-inverse > .container {
   width: 95%;
  }
}


@media (min-width: 992px) {
  .navbar-inverse > .container {
   width: 95%;
  }
}
@media (min-width: 1200px) {
  .navbar>.container .navbar-brand {
    height: 90px;
    width: 340px;
  }
  .navbar-inverse > .container {
    /* display: flex;
    justify-content: space-between; */
   width: 95%;
  }
  .navbar-nav > li {
    margin-left: 30px;
  }
}

footer {
  margin-top: 220px;
  position: relative;
}

footer::before {
  background: url('../img/swirl.svg');
  background-size: cover;
  content: '';
  display: block;
  height: 180px;
  left: 50%;
  margin: -195px 0 0 -175px;
  max-width: 100%;
  position: absolute;
  width: 350px;
}

footer .logo-block {
  border-top: 2px solid #eee;
  padding: 2em 1em;
}
footer .container {
  padding: 1.5em 1.5em;
  width: 100%;
}

footer p {
  clear: none;
  font-size: 0.85em;
  margin: 1em auto;
  padding: 0;
  text-align: center;
}
footer p.pull-right {
  float: right;
  text-align: right;
}
footer p a {
  border-bottom: 1px solid white;
  color: white;
}
footer p a:hover {
  background: rgba(255,255,255,0.2);
  color: white;
}

/* 4. Content region */

.row {
  margin: 0 auto;
}

.col-lg-12 {
  float: none;
  margin: 0 auto;
  max-width: 680px;
}

.mpese-content-panel {

}

.mpese-content-panel .col-lg-12 {
  max-width: initial;
}

.col-md-6 {
  padding: 0;
}

.col-md-12 {
  float: none;
  margin: 0 auto;
  max-width: 750px;
}

.home .col-lg-12 {
  max-width: 780px;
  position: relative;
  z-index: 10000;
}

@media (min-width: 1200px) {
.container {
    max-width: 1500px;
    width: auto;
  }
}



/* 5. Text page */

.mpese-search-nav {
  font-size: 70%;
  margin: 0;
  margin-left: 20px;
  position: relative;
}
.mpese-search-nav:before {
  background: url('../img/rarr.svg');
  background-size: cover;
  content: '';
  display: block;
  height: 8px;
  left: -20px;
  position: absolute;
  top: 7px;
  width: 14px;
}

div#content .mpese-search-nav a {
  border: 0;
  color: #007F9E;
}
.mpese-search-nav a:before {
}
.mpese-search-nav a:hover:before {
}

.mpese-item-title {
  /* font-family: clearsans; */
  font-size: 24px;
  line-height: 1.5;
  margin: 0.75em 0 0.25em;
  max-width: 850px;
}

.mpese-item-title + p {
  font-size: 0.8em;
  margin-bottom: 1.5em;
}

.mpese-item-title + p a {
  color: #007F9E;
}

h2.mpese-item-ms {
  font-size: 0.8em;
  font-weight: normal;
  margin-bottom: 10px;
}

h2.mpese-item-ms a {
  border-bottom: 1px dotted #007F9E;
  color: #000;
  transition: 0.2s ease-in-out all;
}
h2.mpese-item-ms a {
  background: rgb(243, 243, 243);
}

#mpese-transcript {
  -moz-box-shadow: inset 0 0 10px rgba(1,158,197,0.3);
  -webkit-box-shadow: inset 0 0 10px rgba(1,158,197,0.3);
  box-shadow: inset 0px -3px 0px rgba(1,158,197,0.3);
  font-size: 85%;
  line-height: 1.3;
  margin-bottom: 1em;
  padding: 0 0 20px;
  position: relative;
}
/* #mpese-transcript:after {
  background: blue;
  top: 100%;
  content: 'hello';
  display: block;
  height: 20px;
  margin-top: -20px;
  position: absolute;
  width: 100%;
} */

.nav-tabs {
  border-bottom: 2px solid #009fc5;
  font-size: 0.8em;
}

.nav-tabs > li > a {
  border: 0;
  color: black;
  font-weight: 600;
  letter-spacing: 0.3px;
  padding: 5px 7px;
}
#content  .nav-tabs > li.active > a {
  background: #009fc5;
  border: 0;
  color: white;
  font-weight: 600;
}

#mpese-text-body {
  
}

@media only screen and (min-width: 1024px) {
.mpese-text-rm {
    margin-right: 50px;
  }
}

@media only screen and (min-width: 1024px){
.mpese-text-lm {
    margin-left: 50px;
}
}
@media only screen and (min-width: 1024px) {
#mpese-text-body {
  margin: 0 60px;
}
.mpese-add-lm {
    margin-left: -50px;
  }
}




/* 6. Homepage */

.alert-info {
  display: none; /* For theming purposes */
}

.home .navbar-inverse:after {
  background: url('../img/home.jpg');
  background-size: cover;
  height: 240px;
  position: absolute;
  width: 100vw;
  z-index: -10;
}

#search-box {
}

@media (min-width: 768px) {
  #search-box {
    margin: 0 4em;
    padding: 2em 3em 1.5em;
  }
}

#search-results {
  margin-top: 30px;
  position: relative;
}

@media (min-width: 768px) {
  #search-box {
    margin: 0 3em;
    padding: 2em 4em;
  }
}
/* ... */

